--- a/source/content/nerds/index.html
+++ b/source/content/nerds/index.html
@@ -2,16 +2,16 @@
 <html lang="ru" class="page">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Дизайн-студия Нёрдс</title>
-  <link rel="icon" href="favico.ico" />
-  <link rel="icon" href="img/favicon/favico.svg" type="image/svg+xml" />
-  <link rel="apple-touch-icon" href="img/favicon/180.png" />
-  <link rel="manifest" href="manifest.webmanifest" />
-  <link rel="stylesheet" href="css/normalize.css" />
+  <link rel="icon" href="favico.ico">
+  <link rel="icon" href="img/favicon/favico.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicon/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="nouislider/nouislider.css">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page-body">
@@ -19,7 +19,7 @@
     <div class="main-header__container container">
       <a href="index.html" class="main-header__logo">
         <img class="main-header__logo-img logo-image" src="img/nerds-logo.svg" width="160" height="65"
-          alt="Логотп дизайн студии Нёррдс" />
+          alt="Логотп дизайн студии Нёррдс">
       </a>
 
       <nav class="main-nav site-navigation">
@@ -58,11 +58,11 @@
       <div class="container main-slider__slide main-slider__slide--1"
         style="background-image: url('img/nerds-index-slide-1.png')">
         <p class="main-slider__title">
-          Долго, дорого,<br />
+          Долго, дорого,<br>
           скрупулезно.
         </p>
         <p class="main-slider__description">
-          Математически выверенный дизайн<br />
+          Математически выверенный дизайн<br>
           для вашего сайта или мобильного приложения.
         </p>
         <button class="main-slider__button button">Узнаь больше</button>
@@ -71,7 +71,7 @@
       <div class="container main-slider__slide main-slider__slide--2 hidden"
         style="background-image: url('img/nerds-index-slide-2.png')">
         <p class="main-slider__title">
-          Любим математику<br />
+          Любим математику<br>
           как никто другой
         </p>
         <p class="main-slider__description">
@@ -84,11 +84,11 @@
       <div class="container main-slider__slide main-slider__slide--3 hidden"
         style="background-image: url('img/nerds-index-slide-3.png')">
         <p class="main-slider__title">
-          Только ночь,<br />
+          Только ночь,<br>
           только хардкор
         </p>
         <p class="main-slider__description">
-          Работать днем, как все? Мы против этого.<br />
+          Работать днем, как все? Мы против этого.<br>
           Ближе к полуночи работа только начинается.
         </p>
         <button class="main-slider__button button">Узнаь больше</button>
@@ -112,7 +112,7 @@
         <h2 class="visually-hidden">Услуги</h2>
         <ul class="services__list">
           <li class="services__item">
-            <img class="services__image" src="img/service-web.jpg" width="300" height="146" alt="" />
+            <img class="services__image" src="img/service-web.jpg" width="300" height="146" alt="">
             <h3 class="services__title">Вэб-сайты</h3>
             <p class="services__description">
               Мир никогда не будет прежним после того как увидит ваш сайт!
@@ -120,7 +120,7 @@
             <button class="services__button button">Заказать</button>
           </li>
           <li class="services__item">
-            <img class="services__image" src="img/service-application.jpg" width="300" height="146" alt="" />
+            <img class="services__image" src="img/service-application.jpg" width="300" height="146" alt="">
             <h3 class="services__title">Приложения</h3>
             <p class="services__description">
               Покорите топ-10 приложений в AppStore и Google Play
@@ -130,7 +130,7 @@
             </button>
           </li>
           <li class="services__item">
-            <img class="services__image" src="img/service-presentation.jpg" width="300" height="146" alt="" />
+            <img class="services__image" src="img/service-presentation.jpg" width="300" height="146" alt="">
             <h3 class="services__title">Презентации</h3>
             <p class="services__description">
               Вы даже не подозреваете, насколько вы изумительны!
@@ -167,7 +167,7 @@
         </div>
 
         <div class="about__container">
-          <img class="about__image" src="img/nerds-illustration.png" width="360" height="208" alt="Логотип Нёрдс" />
+          <img class="about__image" src="img/nerds-illustration.png" width="360" height="208" alt="Логотип Нёрдс">
           <p class="about__adventages-text">
             с 2004 года Любим точность во всем:
           </p>
@@ -177,7 +177,7 @@
                 146<span class="about__adventages-percent">%</span>
               </p>
               <p class="about__adventages-decription">
-                Уровень <br />самоотдачи
+                Уровень <br>самоотдачи
               </p>
             </li>
             <li class="about__adventages-item">
@@ -185,7 +185,7 @@
                 100<span class="about__adventages-percent">%</span>
               </p>
               <p class="about__adventages-decription">
-                Соблюдение <br />сроков
+                Соблюдение <br>сроков
               </p>
             </li>
             <li class="about__adventages-item">
@@ -193,7 +193,7 @@
                 50<span class="about__adventages-percent">%</span>
               </p>
               <p class="about__adventages-decription">
-                Минимальная <br />предоплата
+                Минимальная <br>предоплата
               </p>
             </li>
           </ul>
@@ -207,22 +207,22 @@
         <ul class="customers__list">
           <li class="customers__item">
             <a class="customers__link" href="#">
-              <img class="customers__logo-img" src="img/logo-htmlacademy.svg" alt="Логотип HTML Academy" />
+              <img class="customers__logo-img" src="img/logo-htmlacademy.svg" alt="Логотип HTML Academy">
             </a>
           </li>
           <li class="customers__item">
             <a class="customers__link" href="#">
-              <img class="customers__logo-img" src="img/logo-borodinsky.svg" alt="Логотип барбершоп Бородинский" />
+              <img class="customers__logo-img" src="img/logo-borodinsky.svg" alt="Логотип барбершоп Бородинский">
             </a>
           </li>
           <li class="customers__item">
             <a class="customers__link" href="#">
-              <img class="customers__logo-img" src="img/logo-pink.svg" alt="Логотип приложения ПИНК" />
+              <img class="customers__logo-img" src="img/logo-pink.svg" alt="Логотип приложения ПИНК">
             </a>
           </li>
           <li class="customers__item">
             <a class="customers__link" href="#">
-              <img class="customers__logo-img" src="img/logo-mishka.svg" alt="Логотип магазина Мишка" />
+              <img class="customers__logo-img" src="img/logo-mishka.svg" alt="Логотип магазина Мишка">
             </a>
           </li>
         </ul>
@@ -232,11 +232,11 @@
 
   <footer class="main-footer">
     <div class="main-footer__map map">
-      <img class="map__image" src="img/map.png" width="1440" height="416" alt="Карта со схемой проезда" />
+      <img class="map__image" src="img/map.png" width="1440" height="416" alt="Карта со схемой проезда">
     </div>
 
     <div class="main-footer__map yandex-map">
-      <script type="text/javascript" charset="utf-8" async
+      <script async
         src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Acb8ade882bd8f83fb37a128d6d89ce9240e858eb7f5c6576565fe556a87be243&amp;width=1440&amp;height=416&amp;lang=ru_RU&amp;scroll=true"></script>
     </div>
 
@@ -289,28 +289,28 @@
   <section class="modal modal-contacts hidden">
     <h2 class="visually-hidden">Форма обратной связи</h2>
     <div class="modal-contacts__header">
-      <p class="modal-contact__title">Напишите нам</p>
+      <p class="modal-contacts__title">Напишите нам</p>
       <button class="modal__close-button" aria-label="Закрыть"></button>
     </div>
-    <div class="modal-contacts__main"></div>
-    <form class="modal-contacts__form" id="contact-popup">
-      <label class="modal-contacts__lable">
-        <span class="modal-contacts__lable-description">Ваше Имя:</span>
-        <input class="input modal-contacts__text-input" type="text" placeholder="Имя фамилия" />
-      </label>
-      <lable class="modal-contacts__lable">
-        <span class="modal-contacts__lable-description">Ваш e-mail:</span>
-        <input class="input modal-contacts__text-input" type="email" placeholder="email@example.com " />
-      </lable>
-      <lable class="modal-contacts__lable">
-        <span class="modal-contacts__lable-description">Текст письма:</span>
-        <textarea class="input modal-contacts__text-input modal-contacts__text-input--texarea"
-          placeholder="В свободной форме"></textarea>
-      </lable>
-      <button class="button modal-contacts__submit" type="submit">
-        Отправить
-      </button>
-    </form>
+    <div class="modal-contacts__main">
+      <form class="modal-contacts__form" id="contact-popup">
+        <label class="modal-contacts__label">
+          <span class="modal-contacts__label-description">Ваше Имя:</span>
+          <input class="input modal-contacts__text-input" type="text" placeholder="Имя фамилия">
+        </label>
+        <label class="modal-contacts__label">
+          <span class="modal-contacts__label-description">Ваш e-mail:</span>
+          <input class="input modal-contacts__text-input" type="email" placeholder="email@example.com ">
+        </label>
+        <label class="modal-contacts__label">
+          <span class="modal-contacts__label-description">Текст письма:</span>
+          <textarea class="input modal-contacts__text-input modal-contacts__text-input--texarea"
+            placeholder="В свободной форме"></textarea>
+        </label>
+        <button class="button modal-contacts__submit" type="submit">
+          Отправить
+        </button>
+      </form>
     </div>
   </section>
 
