add: added links to ladder calculator

--- a/index.html
+++ b/index.html
@@ -72,6 +72,17 @@
                 </li>
 
                 <li class="portfolio__item ">
+                    <img class="portfolio__thumbnail" src="source/img/portfolio/ld-380.jpg" width="380" height="235">
+                    <p class="portfolio__title">Ladder calculator</p>
+                    <div class="portfolio__wrapper">
+                        <a class="portfolio__link" href="source/content/ladder-calculator/index.html">View</a>
+                        <a class="portfolio__link" href="https://github.com/ivansukhoparov/019-05-ladder-calculator">
+                            View code
+                        </a>
+                    </div>
+                </li>
+
+                <li class="portfolio__item ">
                     <img class="portfolio__thumbnail" src="source/img/portfolio/fdwp-380.jpg" width="380" height="235">
                     <p class="portfolio__title">Web Developer Portfolio</p>
                     <div class="portfolio__wrapper">
