--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sukhoparov Ivan - Frontend Portfolio</title>
+
     <link rel="stylesheet" href="source/css/style.css" />
 </head>
 
@@ -19,6 +20,7 @@
             <div class="header__info">
                 <p class="header__name">Ivan Sukhoparov</p>
                 <p class="header__position">Junior Frontend Developer</p>
+                <a href="sign-in.html">_____</a>
                 <p class="header__description"> Some words about me</p>
                 <a class="header__link">Resume</a>
                 <div class="header__contacts contacts">
@@ -161,7 +163,7 @@
                 </li>
 
             </ul>
-            <a href="sign-in.html">link</a>
+
 
 
 
