--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="header__info">
                 <p class="header__name">Ivan Sukhoparov</p>
                 <p class="header__position">Junior Frontend Developer</p>
-                <a href="sign-in.html">_____</a>
+                <a href="/source/sign-in.html">_____</a>
                 <p class="header__description"> Some words about me</p>
                 <a class="header__link">Resume</a>
                 <div class="header__contacts contacts">
