--- a/source/sign-in.html
+++ b/source/sign-in.html
@@ -40,6 +40,7 @@
 
         const token = await fetch("http://localhost:5001/auth/login",            {
                 method: "POST",
+            credentials: 'include',
                 headers: {
                     'Content-Type': 'application/json',
                     'Access-Control-Allow-Origin': '*',
